# carl-parser

./: .gitignore  .travis.yml  BenchmarkOperation.h  CMakeLists.txt  Operations.h  ParseTreeVisitor.cpp  ParseTreeVisitor.h  Parser.h  PolyVisitor.h  Polynomial.g4  README.md  Serialization.g4  SerializationStream.h  Serializer.h  smtlib.g4
.ci/: build_travis.sh  deploy_travis.sh  setup_travis.sh
cmake/: carlparserConfig.cmake.in  export_target.cmake
resources/: antlr4.cmake
src/: CMakeLists.txt  ParseTreeVisitor.cpp  ParseTreeVisitor.h  Parser.h  Serializer.h
src/carl-parser/: ParseTreeVisitor.cpp  ParseTreeVisitor.h  Parser.cpp  Parser.h  Serialization.g4  Serializer.h  smtlib.g4
test/: CMakeLists.txt  doctest.h  test.cpp
